# erm

./: Cargo.toml  README.md
core/: Basics.elm  List.elm  Maybe.elm  String.elm
examples/: Basic.elm  Main.elm
src/: Basics.elm  ast.rs  bindings.rs  builtins.rs  check.rs  checker.rs  dump.rs  env.rs  error.rs  evaluate.rs  evaluater.rs  evaluator.rs  function.rs  lexer.rs  lib.rs  module.rs  parser.rs  project.rs
src/checker/: term.rs  unify.rs
src/evaluater/: values.rs
src/evaluator/: values.rs
src/parser/: error.rs  extract.rs  indent.rs  mtch.rs  types.rs  whitespace.rs
tests/: case.rs  comments.rs  full.rs  functions.rs  imports.rs  lists.rs  prelude.rs  types.rs
tests/common/: mod.rs
tests/snapshots/: case__case__case_statement.snap  case__case__error_on_float_case_statement.snap  case__case__integer_case_statement.snap  case__case__match_any_with_underscore.snap  comments__comments__single_line_comment.snap  full__full__add_int_and_string_fails.snap  full__full__add_ints.snap  full__full__arithmetic_parenthesis.snap  full__full__arithmetic_precedence.snap  full__full__basic_string.snap  full__full__if_statement_multi_line_bad.snap  full__full__if_statement_single_line.snap  full__full__int_comparison_gt.snap  full__full__int_comparison_lt.snap  full__full__main_args.snap  full__full__nested_if_statement.snap  full__full__string_concatenation.snap  functions__functions__function_call_simple.snap  functions__functions__function_call_with_paren_args.snap  functions__functions__function_calls_function.snap  imports__imports__unable_to_find_import.snap  (+22 more)
(+2 files in other folders)
