[package]
name = "erm"
version = "0.1.0"
authors = ["Michael Jones <michael@zaptic.com>"]
edition = "2021"

[[bin]]
name = "erm"
path = "src/bin/run.rs"

[dependencies]
logos = "0.11.4"
regex = { version = "1.4.2" }
walkdir = "2.3.1"
clap = "2.33.3"
im = "15.0.0"
log = "0.4.14"
env_logger = "*"
backtrace = "0.3.63"
insta = "1.8.0"
codespan-reporting = "0.11.0"

[dev-dependencies]
unindent = "0.1.7"

[profile.dev]
opt-level = 0
debug = true
